# ChangeLog for sci-chemistry/gromacs
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  live update

  07 Jul 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0.9999.ebuild:
  sync with gx86, fix FEATURES=test

  26 Jun 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
  live ebuild update

  14 Apr 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild,
  gromacs-5.0_rc1.ebuild, gromacs-9999.ebuild, metadata.xml:
  added make-symlinks use flag, multilib-strict fix

*gromacs-5.0.9999 (08 Apr 2014)
*gromacs-5.0_rc1 (08 Apr 2014)

  08 Apr 2014; Alexey Shvetsov <alexxy@gentoo.org> +gromacs-5.0.9999.ebuild,
  +gromacs-5.0_rc1.ebuild, -gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild,
  metadata.xml:
  [sci-chemistry/gromacs] New ebuilds

  05 Mar 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-9999.ebuild:
  fix multilib-strict

  20 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Update gromacs 5.0

  16 Feb 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-4.6.9999.ebuild:
  git-r3 too smart, migrate back to git-2

  05 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Bash completion changes are comming =D

  05 Feb 2014; Alexey Shvetsov <alexxy@gentoo.org> gromacs-9999.ebuild:
  Revert back to git-2 since git-r2  gives problems

  25 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Add missing dep for USE=doc

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Switch from git-2 to git-r3

  06 Jan 2014; Justin Lecher <jlec@gentoo.org> gromacs-4.6.9999.ebuild,
  gromacs-5.0_beta1.ebuild, gromacs-9999.ebuild:
  Switch from git-2 to git-r3
