@@ -1,2 +1,0 @@
-DIST gromacs-5.0-rc1.tar.gz 54130981 SHA256 852c7048e996f51d6e77abfcd885a4a06ff7f978618b7c1ef9a866f15c3da879 SHA512 decb7e51904daf2bb47c17b2347b7581ac2a1988003028abfd19529c47f05a1e88c3dffba1a552813fd8e594d5f5b872fd7552eb795bc06a2e07dfec656564a0 WHIRLPOOL 72e349b67dfeb4edf5eb0ad4e8396eeaea26960cd636ad5bc382a5d7828a02706534ad95fe085367a9c9b1c3feb761795dd1b0607ec53f90190378837965ba62
-DIST regressiontests-5.0-rc1.tar.gz 60829707 SHA256 7b74fa30cc3dc8b0efd247f92cba4c85de83453cb7f1572c553cbca0dcf7022d SHA512 3e89b1e2cf7953c377a3de8b281da91c05ad1a98c2936e2414898813c4452af6d986d4db269c3124024f2febdd725a83b2941fb3d0a00b3127d868965d81f42a WHIRLPOOL b8ad473bb32368b50d41e627f9b716303f2441eb160870c1da8de70e23ab491b7011020afaf8154321e73c03759582a8121262dcf8b6010b8487fbbce7fa3963
