@@ -2,6 +2,10 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> -Manifest,
+  -gromacs-5.0_rc1.ebuild:
+  drop old
+
   03 Sep 2014; Christoph Junghans <ottxor@gentoo.org> gromacs-5.0.9999.ebuild:
   live update
 
